--- a/BioAutoML-env.yml
+++ b/BioAutoML-env.yml
@@ -11,10 +11,10 @@ dependencies:
   - blas=2.14=openblas
   - brotlipy=0.7.0=py37hb5d75c8_1001
   - bzip2=1.0.8=h516909a_3
-  - ca-certificates=2022.10.11=h06a4308_0
+  - ca-certificates=2023.05.30=h06a4308_0
   - cairo=1.16.0=h3fc0475_1005
   - catboost=1.0.3=py37h89c1867_1
-  - certifi=2022.9.24=py37h06a4308_0
+  - certifi=2022.12.7=py37h06a4308_0
   - cffi=1.15.0=py37h7f8727e_0
   - charset-normalizer=2.0.9=pyhd8ed1ab_0
   - cloudpickle=2.0.0=pyhd8ed1ab_0
@@ -23,6 +23,7 @@ dependencies:
   - cycler=0.11.0=pyhd3eb1b0_0
   - deap=1.3.1=py37h9fdb41a_2
   - decorator=5.1.0=pyhd8ed1ab_0
+  - dill=0.3.6=py37h06a4308_0
   - fontconfig=2.13.1=h7e3eb15_1002
   - freetype=2.10.4=h7ca028e_0
   - future=0.18.2=py37h89c1867_4
@@ -70,11 +71,12 @@ dependencies:
   - matplotlib=3.2.2=1
   - matplotlib-base=3.2.2=py37h1d35a4c_1
   - matplotlib-inline=0.1.6=py37h06a4308_0
+  - multiprocess=0.70.14=py37h06a4308_0
   - ncurses=6.2=h58526e2_4
   - networkx=2.6.3=pyhd3eb1b0_0
   - numba=0.55.1=py37h51133e4_0
   - numpy=1.19.2=py37h7008fea_1
-  - openssl=1.1.1s=h7f8727e_0
+  - openssl=1.1.1u=h7f8727e_0
   - orderedset=2.0.3=py37h8f50634_3
   - pandas=0.25.3=py37hb3f55d8_0
   - parso=0.8.3=pyhd3eb1b0_0
@@ -88,15 +90,15 @@ dependencies:
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - py-xgboost=1.5.0=py37h06a4308_1
+  - py4j=0.10.7=py37_0
   - pycairo=1.20.0=py37h01af8b0_1
   - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.11.2=pyhd3eb1b0_0
   - pymongo=3.12.0=py37h295c915_0
   - pyopenssl=21.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=py37h06a4308_0
   - pysocks=1.7.1=py37h89c1867_4
+  - pyspark=2.4.5=py_0
   - python=3.7.3=h5b0a415_0
-  - python-dateutil=2.8.0=py_0
   - python-igraph=0.8.3=py37h340e831_2
   - python_abi=3.7=2_cp37m
   - pytz=2021.1=pyhd8ed1ab_0
@@ -108,6 +110,7 @@ dependencies:
   - setuptools=52.0.0=py37h06a4308_1
   - shap=0.39.0=py37h51133e4_0
   - six=1.15.0=pyh9f0ad1d_0
+  - sklearn-genetic=0.5.1=pyhd8ed1ab_0
   - slicer=0.0.7=pyhd3eb1b0_0
   - sqlite=3.33.0=h62c20be_0
   - stopit=1.1.2=py_0
@@ -115,7 +118,6 @@ dependencies:
   - texttable=1.6.3=pyh9f0ad1d_0
   - threadpoolctl=3.0.0=pyh8a188c0_0
   - tk=8.6.10=h21135ba_1
-  - tornado=6.1=py37h27cfd23_0
   - tpot=0.11.7=pyhd8ed1ab_1
   - tqdm=4.62.3=pyhd8ed1ab_0
   - traitlets=5.1.1=pyhd3eb1b0_0
@@ -138,3 +140,4 @@ dependencies:
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h36c2ea0_1013
   - zstd=1.4.9=haebb681_0
+prefix: /home/bonidia/miniconda3/envs/bioautoml
