--- a/BioAutoML-env.yml
+++ b/BioAutoML-env.yml
@@ -1,143 +1,138 @@
 name: bioautoml
 channels:
-  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
-  - _py-xgboost-mutex=2.0=cpu_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - biopython=1.78=py37h4abf009_1
-  - blas=2.14=openblas
-  - brotlipy=0.7.0=py37hb5d75c8_1001
-  - bzip2=1.0.8=h516909a_3
-  - ca-certificates=2023.05.30=h06a4308_0
-  - cairo=1.16.0=h3fc0475_1005
-  - catboost=1.0.3=py37h89c1867_1
-  - certifi=2022.12.7=py37h06a4308_0
-  - cffi=1.15.0=py37h7f8727e_0
-  - charset-normalizer=2.0.9=pyhd8ed1ab_0
-  - cloudpickle=2.0.0=pyhd8ed1ab_0
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=36.0.0=py37h9ce1e76_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - deap=1.3.1=py37h9fdb41a_2
-  - decorator=5.1.0=pyhd8ed1ab_0
-  - dill=0.3.6=py37h06a4308_0
-  - fontconfig=2.13.1=h7e3eb15_1002
-  - freetype=2.10.4=h7ca028e_0
-  - future=0.18.2=py37h89c1867_4
-  - gettext=0.19.8.1=hf34092f_1004
-  - giflib=5.2.1=h7b6447c_0
-  - glib=2.58.3=py37he00f558_1004
-  - gmp=6.2.1=h58526e2_0
-  - hyperopt=0.2.5=pyh9f0ad1d_0
-  - icu=67.1=he1b5a44_0
-  - idna=3.3=pyhd3eb1b0_0
-  - igraph=0.8.3=hef4adab_1
-  - imbalanced-learn=0.8.1=pyhd8ed1ab_0
-  - ipython=7.31.1=py37h06a4308_1
-  - jedi=0.18.1=py37h06a4308_1
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9e=h7f8727e_0
-  - kiwisolver=1.4.2=py37h295c915_0
-  - lcms2=2.12=h3be6417_0
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libedit=3.1.20191231=he28a2e2_2
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.5.0=h14aa051_19
-  - libgfortran4=7.5.0=h14aa051_19
-  - libgomp=9.3.0=h5101ec6_17
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.8.0=14_openblas
-  - liblapacke=3.8.0=14_openblas
-  - libllvm11=11.1.0=h3826bc1_1
-  - libopenblas=0.3.7=h5ec1e0e_6
-  - libpng=1.6.37=h21135ba_2
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.2.0=h85742a9_0
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp=1.2.2=h55f646e_0
-  - libwebp-base=1.2.2=h7f8727e_0
-  - libxcb=1.13=h14c3975_1002
-  - libxgboost=1.5.0=h295c915_1
-  - libxml2=2.9.10=h68273f3_2
-  - libzlib=1.2.11=h36c2ea0_1013
-  - lightgbm=3.2.1=py37h295c915_0
-  - llvmlite=0.38.0=py37h4ff587b_0
-  - lz4-c=1.9.3=h295c915_1
-  - matplotlib=3.2.2=1
-  - matplotlib-base=3.2.2=py37h1d35a4c_1
-  - matplotlib-inline=0.1.6=py37h06a4308_0
-  - multiprocess=0.70.14=py37h06a4308_0
-  - ncurses=6.2=h58526e2_4
-  - networkx=2.6.3=pyhd3eb1b0_0
-  - numba=0.55.1=py37h51133e4_0
-  - numpy=1.19.2=py37h7008fea_1
-  - openssl=1.1.1u=h7f8727e_0
-  - orderedset=2.0.3=py37h8f50634_3
-  - pandas=0.25.3=py37hb3f55d8_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pcre=8.44=he1b5a44_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.0.1=py37h22f2fdc_0
-  - pip=21.0.1=pyhd8ed1ab_0
-  - pixman=0.38.0=h516909a_1003
-  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - py-xgboost=1.5.0=py37h06a4308_1
-  - py4j=0.10.7=py37_0
-  - pycairo=1.20.0=py37h01af8b0_1
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pymongo=3.12.0=py37h295c915_0
-  - pyopenssl=21.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=py37h06a4308_0
-  - pysocks=1.7.1=py37h89c1867_4
-  - pyspark=2.4.5=py_0
-  - python=3.7.3=h5b0a415_0
-  - python-igraph=0.8.3=py37h340e831_2
-  - python_abi=3.7=2_cp37m
-  - pytz=2021.1=pyhd8ed1ab_0
-  - readline=7.0=hf8c457e_1001
-  - reportlab=3.5.67=py37hfdd840d_1
-  - requests=2.26.0=pyhd8ed1ab_1
-  - scikit-learn=1.0.1=py37h51133e4_0
-  - scipy=1.6.1=py37hf56f3a7_0
-  - setuptools=52.0.0=py37h06a4308_1
-  - shap=0.39.0=py37h51133e4_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - sklearn-genetic=0.5.1=pyhd8ed1ab_0
-  - slicer=0.0.7=pyhd3eb1b0_0
-  - sqlite=3.33.0=h62c20be_0
-  - stopit=1.1.2=py_0
-  - tbb=2021.5.0=hd09550d_0
-  - texttable=1.6.3=pyh9f0ad1d_0
-  - threadpoolctl=3.0.0=pyh8a188c0_0
-  - tk=8.6.10=h21135ba_1
-  - tpot=0.11.7=pyhd8ed1ab_1
-  - tqdm=4.62.3=pyhd8ed1ab_0
-  - traitlets=5.1.1=pyhd3eb1b0_0
-  - typing_extensions=4.3.0=py37h06a4308_0
-  - update_checker=0.18.0=pyh9f0ad1d_0
-  - urllib3=1.26.7=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.12=h36c2ea0_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h36c2ea0_1013
-  - zstd=1.4.9=haebb681_0
-prefix: /home/bonidia/miniconda3/envs/bioautoml
+  - _openmp_mutex=5.1=1_gnu
+  - bzip2=1.0.8=h5eee18b_5
+  - ca-certificates=2024.3.11=h06a4308_0
+  - certifi=2024.2.2=py311h06a4308_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libuuid=1.41.5=h5eee18b_0
+  - ncurses=6.4=h6a678d5_0
+  - openssl=3.0.13=h7f8727e_0
+  - pip=23.3.1=py311h06a4308_0
+  - python=3.11.8=h955ad1f_0
+  - readline=8.2=h5eee18b_0
+  - setuptools=68.2.2=py311h06a4308_0
+  - sqlite=3.41.2=h5eee18b_0
+  - tk=8.6.12=h1ccaba5_0
+  - wheel=0.41.2=py311h06a4308_0
+  - xz=5.4.6=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
+  - pip:
+      - alembic==1.13.1
+      - altair==5.3.0
+      - asttokens==2.4.1
+      - attrs==23.2.0
+      - biopython==1.83
+      - blinker==1.7.0
+      - cachetools==5.3.3
+      - catboost==1.2.3
+      - chardet==5.2.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - cloudpickle==3.0.0
+      - colorlog==6.8.2
+      - comm==0.2.2
+      - contourpy==1.2.0
+      - cycler==0.12.1
+      - deap==1.4.1
+      - debugpy==1.8.1
+      - decorator==5.1.1
+      - dill==0.3.8
+      - executing==2.0.1
+      - fonttools==4.50.0
+      - future==1.0.0
+      - gitdb==4.0.11
+      - gitpython==3.1.43
+      - greenlet==3.0.3
+      - hyperopt==0.2.7
+      - idna==3.6
+      - imbalanced-learn==0.12.2
+      - imblearn==0.0
+      - ipykernel==6.29.4
+      - ipython==8.23.0
+      - jedi==0.19.1
+      - jinja2==3.1.3
+      - joblib==1.3.2
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
+      - jupyter-client==8.6.1
+      - jupyter-core==5.7.2
+      - kiwisolver==1.4.5
+      - lightgbm==4.3.0
+      - llvmlite==0.42.0
+      - mako==1.3.2
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.5
+      - matplotlib==3.8.3
+      - matplotlib-inline==0.1.6
+      - mdurl==0.1.2
+      - multiprocess==0.70.16
+      - nest-asyncio==1.6.0
+      - networkx==3.3
+      - numba==0.59.1
+      - numpy==1.26.4
+      - optuna==3.6.1
+      - packaging==23.2
+      - pandas==2.2.1
+      - parso==0.8.4
+      - pexpect==4.9.0
+      - pillow==10.2.0
+      - platformdirs==4.2.0
+      - plotly==5.20.0
+      - polars==0.20.17
+      - prompt-toolkit==3.0.43
+      - protobuf==4.25.3
+      - psutil==5.9.8
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.2
+      - py4j==0.10.9.7
+      - pyarrow==15.0.2
+      - pydeck==0.8.1b0
+      - pygad==3.3.1
+      - pygments==2.17.2
+      - pynndescent==0.5.12
+      - pyparsing==3.1.2
+      - python-dateutil==2.9.0.post0
+      - python-graphviz==0.20.3
+      - pytz==2024.1
+      - pyyaml==6.0.1
+      - pyzmq==25.1.2
+      - referencing==0.34.0
+      - reportlab==4.1.0
+      - requests==2.31.0
+      - rich==13.7.1
+      - rpds-py==0.18.0
+      - scikit-learn==1.4.1.post1
+      - scipy==1.13.0
+      - shap==0.45.0
+      - six==1.16.0
+      - sklearn-genetic==0.6.0
+      - sklearn-genetic-opt==0.10.1
+      - slicer==0.0.7
+      - smmap==5.0.1
+      - sqlalchemy==2.0.29
+      - stack-data==0.6.3
+      - streamlit==1.32.2
+      - streamlit-option-menu==0.3.12
+      - tenacity==8.2.3
+      - threadpoolctl==3.4.0
+      - toml==0.10.2
+      - toolz==0.12.1
+      - tornado==6.4
+      - tqdm==4.66.2
+      - traitlets==5.14.2
+      - typing-extensions==4.10.0
+      - tzdata==2024.1
+      - umap-learn==0.5.6
+      - urllib3==2.2.1
+      - watchdog==4.0.0
+      - wcwidth==0.2.13
+      - xgboost==2.0.3
+prefix: /home/brenoslivio/miniconda3/envs/bioautoml
