--- a/BioAutoML-env.yml
+++ b/BioAutoML-env.yml
@@ -53,6 +53,7 @@ dependencies:
       - greenlet==3.0.3
       - hyperopt==0.2.7
       - idna==3.6
+      - igraph==0.11.6
       - imbalanced-learn==0.12.2
       - imblearn==0.0
       - ipykernel==6.29.4
@@ -100,6 +101,7 @@ dependencies:
       - pynndescent==0.5.12
       - pyparsing==3.1.2
       - python-dateutil==2.9.0.post0
+      - python-graphviz==0.20.3
       - pytz==2024.1
       - pyyaml==6.0.1
       - pyzmq==25.1.2
@@ -118,18 +120,22 @@ dependencies:
       - smmap==5.0.1
       - sqlalchemy==2.0.29
       - stack-data==0.6.3
+      - stopit==1.1.2
       - streamlit==1.32.2
       - streamlit-option-menu==0.3.12
       - tenacity==8.2.3
+      - texttable==1.7.0
       - threadpoolctl==3.4.0
       - toml==0.10.2
       - toolz==0.12.1
       - tornado==6.4
+      - tpot==0.12.2
       - tqdm==4.66.2
       - traitlets==5.14.2
       - typing-extensions==4.10.0
       - tzdata==2024.1
       - umap-learn==0.5.6
+      - update-checker==0.18.0
       - urllib3==2.2.1
       - watchdog==4.0.0
       - wcwidth==0.2.13
