--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ requires-python = ">=3.11"
 dependencies = [
     "biopython>=1.85",
     "catboost>=1.2.7",
+    "fastexcel>=0.14.0",
     "hyperopt>=0.2.7",
     "igraph>=0.11.8",
     "imbalanced-learn>=0.13.0",
     "ipykernel>=6.29.5",
     "lightgbm>=4.6.0",
     "networkx>=3.4.2",
+    "openpyxl>=3.1.5",
     "optuna>=4.2.1",
     "pandas>=2.2.3",
     "plotly>=6.0.1",
