--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,10 @@ dependencies = [
     "plotly>=6.0.1",
     "polars>=1.27.0",
     "pygad>=3.4.0",
+    "redis>=7.1.0",
     "reportlab>=4.3.1",
     "requests>=2.32.3",
+    "rq>=2.6.1",
     "scikit-learn>=1.6.1",
     "setuptools>=78.1.0",
     "shap>=0.47.1",
