--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "sklearn-genetic>=0.6.0",
     "sklearn-genetic-opt>=0.11.1",
     "streamlit>=1.44.1",
+    "streamlit-aggrid>=1.2.1",
     "streamlit-option-menu>=0.4.0",
     "tpot>=0.12.2",
     "tqdm>=4.67.1",
